--- a/package.json
+++ b/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "journal",
-  "private": true,
-  "version": "0.0.0",
+  "name": "journal-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest"
+    "test": "jest --watchAll",
+    "start": "node index.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.1",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.2.1",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "jsdom": "^20.0.0",
-    "node-fetch": "^3.2.6",
-    "vite": "^2.9.9",
-    "vitest": "^0.17.0"
+    "jest": "^28.1.2",
+    "supertest": "^6.2.4"
   }
 }
