--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "journal-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "journal",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "test": "jest --watchAll",
-    "start": "node index.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.4.1",
-    "pg": "^8.7.3"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "jest": "^28.1.2",
-    "supertest": "^6.2.4"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "jsdom": "^20.0.0",
+    "node-fetch": "^3.2.6",
+    "vite": "^2.9.9",
+    "vitest": "^0.17.0"
   }
 }
